--- a/contract/foundry.toml
+++ b/contract/foundry.toml
@@ -5,6 +5,7 @@ libs = ["lib"]
 solc = "0.8.24"
 optimizer = true
 optimizer_runs = 200
+fs_permissions = [{ access = "read-write", path = "./" }]
 
 [rpc_endpoints]
 base = "https://mainnet.base.org"
