--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tct",
+  "name": "ilenoid",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,23 +10,24 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:contracts": "clarinet test",
+    "check:contracts": "clarinet check",
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@stacks/connect": "^8.0.0",
+    "@stacks/network": "^7.0.0",
+    "@stacks/transactions": "^7.0.0",
     "@tanstack/react-query": "^5.90.19",
-    "@wagmi/connectors": "^7.1.5",
-    "@wagmi/core": "^3.3.1",
     "date-fns": "^4.1.0",
     "next": "16.1.4",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
-    "viem": "^2.44.4",
-    "wagmi": "^3.4.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
@@ -46,6 +47,8 @@
     "jest-environment-jsdom": "^30.2.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@stacks/clarinet-sdk": "^3.9.1",
+    "clarinet": "^1.0.0"
   }
 }
